feat: implement FHIRPath type() reflection function (#112)
* feat: implement FHIRPath type() reflection function (#111)

Add the type() function that returns TypeInfo structs with namespace, name,
and baseType fields. Handles System types, FHIR primitives, complex types,
resources, and choice types with per-row type resolution via CASE WHEN chains.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix: address review feedback for type() implementation

- Use imported ArrayList instead of fully-qualified name
- Add explanatory comment for type registration in OperationRegistry
- Fix misleading fallback comment in TypeInfoValue.fromType
- Remove redundant StringType casts in TypeOps.typeInfoStruct

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* fix: address review findings for type() implementation

- Validate type() takes no arguments (throws InvalidExpressionException)
- Fix plural choice types (component.value.type()) with element-wise
  transform via new "typeChoicePlural" codegen path
- Use LinkedHashMap in InlineChoiceType for deterministic variant ordering
- Add tests for plural choice type and argument validation (54 total)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 (1M context) <noreply@anthropic.com>